#-------------------------------------------------------------------------
#   rxtx is a native interface to serial ports in java.
#   Copyright 1997-2000 by Trent Jarvi trentjarvi@yahoo.com.
#
#   This library is free software; you can redistribute it and/or
#   modify it under the terms of the GNU Library General Public
#   License as published by the Free Software Foundation; either
#   version 2 of the License, or (at your option) any later version.
#
#   This library is distributed in the hope that it will be useful,
#   but WITHOUT ANY WARRANTY; without even the implied warranty of
#   MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
#   Library General Public License for more details.
#
#   You should have received a copy of the GNU Library General Public
#   License along with this library; if not, write to the Free
#   Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA
#-------------------------------------------------------------------------
AC_INIT(src/SerialImp.c)
AM_CONFIG_HEADER(config.h)
AC_CANONICAL_SYSTEM
AC_MSG_WARN(Trying libtool.  If the following fails install libtool)
AC_DISABLE_STATIC
AM_PROG_LIBTOOL
AM_INIT_AUTOMAKE(Serial,1.2.10)
AC_PROG_CC
AC_CHECK_HEADERS(fcntl.h)
AC_CHECK_HEADERS(sys/fcntl.h)
AC_CHECK_HEADERS(sys/file.h)
AC_CHECK_HEADERS(sys/time.h)
AC_CHECK_HEADERS(sys/signal.h)
AC_CHECK_HEADERS(signal.h)
AC_CHECK_HEADERS(termios.h)
AC_PROG_GCC_TRADITIONAL
AC_SUBST(WINDOWS_JAVA_INCLUDE)
AC_SUBST(JAVAINCLUDE)
AC_SUBST(JAVANATINC)
AC_SUBST(CLASSPATH)
AC_SUBST(TOP)
AC_SUBST(TARGETLIB)
AC_SUBST(LDFLAG)
AC_SUBST(CFLAGS)
AC_SUBST(THREAD_FLAG)
AC_SUBST(OS_NAME)
AC_SUBST(OS_ARCH)
AC_SUBST(OS_VERSION)
AC_SUBST(JAVA_VERSION)
AC_SUBST(JAVA_VENDOR)
AC_SUBST(JAVA_HOME)
AC_SUBST(JAVA_LIBRARY_PATH)
AC_SUBST(JAVA_CLASS_PATH)
AC_SUBST(JAVA_CLASS_VERSION)
AC_SUBST(JAVAH_FIX)
AC_SUBST(JPATH)
AC_SUBST(JHOME)
AC_SUBST(RXTX_PATH)
AC_SUBST(JAVAH)
AC_SUBST(JAVAC)
AC_SUBST(JAR)
AC_SUBST(JAVADOC)
AC_SUBST(EXTENSION)
AC_SUBST(LIBTOOL_FIX)
AC_SUBST(LDFLAGS)

JHOME=
RXTX_PATH=
EXTENSION="c"
TOP="`pwd`"


[case "$host_os" in
	*-gnu)
	CFLAGS="$CFLAGS -D_POSIX_SOURCE";;
	*);;
esac]
AC_ARG_ENABLE(PRINTER,
	[  --enable-PRINTER        PRINTER support (experimental) [default=yes]],
	echo $enable_PRINTER,
	enable_PRINTER="yes"
)
	if test x$enable_PRINTER = xyes; then  
		TARGETLIB="\$(target_alias)/libSerial.la \
			\$(target_alias)/libParallel.la \
			\$(target_alias)/libI2C.la \
			\$(target_alias)/libRaw.la \
			\$(target_alias)/libRS485.la \
			\$(target_alias)/libfuser.la"
	else
		TARGETLIB="\$(target_alias)/libSerial.la"
	fi

AC_ARG_ENABLE(lockfiles,
	[  --enable-lockfiles      enable lock files (experimental) [default=no]],
	if test x$enable_lockfiles = xyes; then 
		CFLAGS="$CFLAGS -DLOCKFILES"
	fi
)

AC_ARG_ENABLE(DEBUG,
	[  --enable-DEBUG          Print debugging info from SerialImp.c],
	if test x$enable_DEBUG = xyes; then 
		CFLAGS="$CFLAGS -DDEBUG"
	fi
)
find_java_native_include()
{
JAVANATINC="-I \$(JPATH)/`cd $JPATH; find ./include -name $1|sed s#$1##|head -n1`"
if [ test `find $JPATH/include -name $1|wc -l` != "1" ]; then
	echo 1>&2
	echo WARNING:  configure is having a hard time determining which  1>&2
	echo directory contains the file $1.  Edit Makefile and fix the  1>&2
	echo variable JAVANATINC to point to the correct directory. 1>&2
	echo 1>&2
	echo The following options are available: 1>&2
	find $JPATH/include -name $1|sed s#jni_md\.h## 1>&2
	echo 1>&2
	echo If there are more than one option available the first was selected.  1>&2
	echo 1>&2
fi
}
build_conftest()
{
cat > conftest.java << EOF
/* this may be usefull for getting around java cobwebs during build */
public class conftest 
{
	public static void main(String[[]] args) 
	{
		System.out.println(System.getProperty(args[[0]]));
	}
}
EOF
CLASSPATH=.:$CLASSPATH
javac conftest.java
}

run_conftest()
{
	echo $ac_n checking $1   " " 1>&6
	VAR=`java conftest $1`
	echo $VAR  1>&6
	echo $VAR
	return
}

build_conftest
JPATH=`run_conftest java.home| sed s#\/jre\\$##g`
if test x$JPATH = x; then
	AC_MSG_ERROR([Make sure java is in your path before running configure])
fi
echo adjusted java.home is $JPATH
if test "$target_alias" = i386-mingw32 ;then
	OS_NAME=WIN32
else
	OS_NAME=`run_conftest os.name`
fi
OS_ARCH=`run_conftest os.arch`
#JAVA_CLASS_PATH=`run_conftest java.class.path`
#JAVA_LIBRARY_PATH=`run_conftest java.library.path`
JAVA_VENDOR=`run_conftest java.vendor`
JAVA_VERSION=`run_conftest java.version`
rm -f conftest.java
rm -f conftest.class

echo $ac_n checking os.version   " " 1>&6
OS_VERSION=`uname -r`
echo $OS_VERSION 1>&6

check_prefix()
{
	if test $prefix != "/usr";then 
		echo 1>&2
		echo "WARNING:  configure was not run with option --prefix=/usr" 1>&2
		echo "          Unless /usr/local/lib or the specified prefix is in"  1>&2
		echo "          the linkers path this will cause problems later on." 1>&2
		echo 1>&2
	fi
}
# an attempt to compile on libc5 linux machines
check_java_headers()
{

cat > conftest.c << EOF
#include <features.h>
int main(int argc, char *argv[])
{
#if defined (__GLIBC__)
        printf("%i\n",__GLIBC__);
#else
	printf("0\n");
#endif
	
	exit(0);
}
EOF
	cc conftest.c -o conftest
	if [ test `./conftest` -lt 2 ];then 
		echo 1>&2
		echo "       WARNING:  Older libc on linux detected.  Patching a local copy of jni_md.h" 1>&2
		echo 1>&2
		ln -s `find $JPATH/include -name jni.h` .
		cp `find $JPATH/include -name typedefs_md.h` .
		# not pretty.  could be cleaned up
		patch << EOF
--- typedefs_md.h	Tue Jan 11 14:17:08 2000
+++ typedefs_md.h.patchtaj	Tue Jan 11 14:15:53 2000
@@ -17,9 +17,6 @@
  */
 
 /* sbb: Johan Vos, why isn't this #ifndef inside the solaris header guard? */
-#ifndef BITSPERCHAR
-#define BITSPERCHAR 8
-#endif
 
 #ifndef _SOLARIS_TYPES_MD_H_
 #define _SOLARIS_TYPES_MD_H_
@@ -28,50 +25,19 @@
 #include <sys/stat.h>
 #include "bool.h"
 
-#if defined(__alpha__)
-typedef unsigned long ptr_int;
-#define PTR_IS_64 1
-#define LONG_IS_64 1
-#else
 typedef unsigned int ptr_int;
 #define PTR_IS_32 1
-#endif
 
 /* don't redefine typedef's on Solaris 2.6 or Later */
 
-#if !defined(_ILP32) && !defined(_LP64)
-
-#ifndef	_UINT64_T
-#define	_UINT64_T
-#ifdef LONG_IS_64
-typedef unsigned long uint64_t;
-#else
 typedef unsigned long long uint64_t;
-#endif
-#define _UINT32_T
 typedef unsigned int uint32_t;
-#if defined(__linux__)
 typedef unsigned int uint_t;
-#endif
-#endif
 
-#ifndef __BIT_TYPES_DEFINED__
-#ifdef (__i386__)
-/* that should get Linux, at least */
 #ifndef	_INT64_T
 #define	_INT64_T
-#ifdef LONG_IS_64
-typedef long int64_t;
-#else
 typedef long long int64_t;
-#endif
-#define _INT32_T
-typedef int int32_t;
-#if defined(__linux__)
-typdef int int_t;
-#endif
-#endif
-#endif /* i386 */
+typedef int int_t;
 #endif /* __BIT_TYPES_DEFINED__ */
 
 #endif	/* !defined(_ILP32) && !defined(_LP64) */
@@ -110,27 +76,15 @@
 #endif
 
 
-/* On Intel these conversions have to be method calls and not typecasts.
-   See the win32 typedefs_md.h file */
-#if ((defined(i386) || defined (__i386)) && defined(__solaris__)) || defined(__powerpc__)
-
-extern int32_t float2l(float f);
-extern int32_t double2l(double d);
-extern int64_t float2ll(float f);
-extern int64_t double2ll(double d);
-
-#else /* not solaris x386 or linux powerpc*/
-
 #define float2l(f)	(f)
 #define double2l(f)	(f)
 #define float2ll(f)	((int64_t) (f))
 #define double2ll(f)	((int64_t) (f))
 
-#endif /* i386 */
-
 
 #define ll2float(a)	((float) (a))
 #define ll2double(a)	((double) (a))
+#define double2ll(f)    ((int64_t) (f))
 
 /* comparison operators */
 #define ll_ltz(ll)	((ll)<0)
@@ -148,13 +102,7 @@
 
 extern void ll2str(int64_t a, char *s, char *limit);
 
-#if defined(ppc) || defined(__ppc__) || defined(__alpha__) || defined(__sparc__)
-#ifndef HAVE_ALIGNED_DOUBLES
+#if defined(ppc) || defined(__ppc__) || defined(__alpha__)
 #define HAVE_ALIGNED_DOUBLES
-#endif
-#ifndef HAVE_ALIGNED_LONGLONGS
 #define HAVE_ALIGNED_LONGLONGS
 #endif
-#endif
-
-#endif /* !_SOLARIS_TYPES_MD_H_ */
EOF
	fi
	rm -f conftest.c
	rm -f conftest
}
check_kernel_headers()
{
	cat > conftest.c << EOF

#include <linux/version.h>

int main(int argc, char *argv[])
{
	printf(UTS_RELEASE"\n");
	exit(0);
}
EOF
	cc conftest.c -o conftest
	if [ test `uname -r` != `./conftest` ];then 
		echo 1>&2
		echo "       WARNING:  Kernel include files do not match the current kernel" 1>&2
		echo 1>&2
	fi
	rm -f conftest.c
	rm -f conftest
}
fix_comm_jar()
{
	if test -f $1;then
		echo "------------------------------------------------------" 1>&2
		echo "WARNING:  A comm.jar file is alread installed" 1>&2
		echo "make install will overwrite it" 1>&2
		echo 1>&2
		echo $1
		echo 1>&2
		echo "------------------------------------------------------" 1>&2
	fi;
}

JAVAINCLUDE="-I \$(JPATH)/include"
if test "$CC" = "gcc" || test "$CC"="egcs"; then
	case $JAVA_VENDOR in
	Tran*)
		find_java_native_include jni.h
		JAVAH="kaffeh \$(CLASSPATH) -d \$(DEST) -jni"
		JAVAC="javac \$(CLASSPATH) -d \$(TOP)/ -O"
		JAR="jar"
		JAVADOC="javadoc \$(CLASSPATH)"
		CFLAGS="$CFLAGS -D_BSD_SOURCE"
		JAVAINCLUDE=""
		JAVAH_FIX="if test ! -d \$(target_alias);then  mkdir \$(target_alias);fi;"
		JHOME=$JPATH"/share/kaffe/"
		RXTX_PATH=$JPATH"/lib/kaffe/"
		;;
	IBM*)
		find_java_native_include jni_md.h
		JAVAH="javah \$(CLASSPATH) -d \$(DEST) -jni"
		JAVAC="javac \$(CLASSPATH) -d \$(TOP)/ -O"
		JAR="jar"
		JAVADOC="javadoc"
		CFLAGS="$CFLAGS -D_BSD_SOURCE"
		;;
	*)
		find_java_native_include jni_md.h
		JAVAH="javah \$(CLASSPATH) -d \$(DEST) -jni"
		JAVAC="javac \$(CLASSPATH) -d \$(TOP)/ -O"
		JAR="jar"
		JAVADOC="javadoc"
		CFLAGS="$CFLAGS -D_BSD_SOURCE"
		;;
	esac
fi
if [ test -d $JPATH/share/kaffe/ ]
	then fix_comm_jar $JPATH/share/kaffe/comm.jar
elif [ test -d $JPATH/jre/lib/ext ]
	then fix_comm_jar $JPATH/jre/lib/ext/comm.jar
elif [ test -d $JPATH/lib ] 
	then fix_comm_jar $JPATH/lib/comm.jar
fi

#  http://www.tolstoy.com/samizdat/sysprops.html

[ case $OS_NAME in 
Linux)
	check_kernel_headers
	check_java_headers
	#  enable lockfiles by default on linux
	CFLAGS="$CFLAGS -DLOCKFILES"
	case $JAVA_VERSION in

	1.2*|1.3*) 
		#fix_parameters $JPATH/jre/lib/javax.comm.properties
		CLASSPATH="-classpath .:\$(TOP):\$(TOP)/src:"`find $JPATH/ -name comm.jar |head -n1`
		JHOME=$JPATH"/jre/lib/ext"
		RXTX_PATH="\$(JPATH)/jre/lib/\$(OS_ARCH)"
	;;
	1.*) 
		CLASSPATH="-classpath .:\$(TOP):\$(TOP)/src:"` \
			if [ -d $JPATH/share/kaffe/ ]; then
				find $JPATH/share/kaffe/ -name [cK]lasses.[jz][ai][rp]
			elif [ -d $JPATH/lib/ ]; then
				find $JPATH/lib/ -name [cK]lasses.[jz][ai][rp]
			fi`
		if test x"$RXTX_PATH" = x;then
			#  We are not using kaffe
			check_prefix
			RXTX_PATH="\$(prefix)/lib/"
			#JAVAH_FIX="if [ ! -d com ]; then if [ ! -f \$(JPATH)/lib/comm.jar ]; then echo \"Please install comm.jar from CommAPI in \$(JPATH)/java/lib/ 1>&2\"; else mkdir -p com/sun/comm;\$(JAR) -xf \$(JPATH)/lib/comm.jar;  fi; fi;";
		fi;
		if test x"$JHOME" = x;then
			JHOME=$JPATH/"lib"
		fi
	;;
	esac 

	# Cross Compilers
	case $target_os in 
	linux*)
	;;
	beos*)
		TARGETLIB="\$(target_alias)/libSerial.la"
		EXTENSION="cpp"
		LDFLAGS="-ldevice"
		echo ----------------------------
		echo $target_os
		echo ----------------------------
	;;
	freebsd*)
	;;
	esac
;;
*BSD)
	RXTX_PATH="\$(prefix)/lib"
	JHOME=$JPATH/"lib"
	# LOCKFILES may cause problems on netbsd and openbsd
	CFLAGS="$CFLAGS -D_NO_POSIX=1 -D_NO_XOPEN4=1 -DLOCKFILES"
	TARGETLIB="\$(target_alias)/libSerial.la"
	case $JAVA_VERSION in
	1.2*|1.3*) 
		fix_parameters $JPATH/jre/lib/javax.comm.properties
		fix_comm_jar $JPATH/jre/lib/ext/comm.jar
	;;
	1.*) 
		check_prefix
		fix_parameters $JPATH/lib/javax.comm.properties
		fix_comm_jar $JPATH/lib/comm.jar
		CLASSPATH="-classpath .:\$(TOP):\$(TOP)/src:\$(JPATH)/lib/classes.zip:\$(JPATH)/lib/comm.jar"
	;;
	*)
	;;
	esac
;;
Irix*)
	JHOME=$JPATH/"lib"
	CFLAGS="$CFLAGS -I/usr/include"
	CLASSPATH="-classpath .:\$(TOP):\$(TOP)/src:\$(JPATH)/lib/classes.zip:\$(JPATH)/lib/comm.jar:$CLASSPATH"
	RXTX_PATH="\$(JPATH)/lib/\$(OS_ARCH)"
	TARGETLIB="\$(target_alias)/libSerial.la"
;;
HP-UX)
	TARGETLIB="\$(target_alias)/libSerial.la"
	CFLAGS="-g -Aa +e -D__hpux__ -D_HPUX_SOURCE -D_NO_POSIX=1 -D_NO_XOPEN4=1"
	RXTX_PATH="\$(JPATH)/jre/lib/\$(OS_ARCH)"
	TARGETLIB="\$(target_alias)/libSerial.la"
	case $JAVA_VERSION in
		HP-UX\ Java\ C.01.2*) 
			fix_parameters $JPATH/jre/lib/javax.comm.properties
			fix_comm_jar $JPATH/jre/lib/ext/comm.jar
			JHOME=$JPATH"/jre/lib/ext"
			CLASSPATH="-classpath .:\$(TOP):\$(TOP)/src:\$(JPATH)/lib/classes.zip:\$(JPATH)/jre/lib/ext/comm.jar:$CLASSPATH"
			RXTX_PATH="\$(JPATH)/jre/lib/\$(OS_ARCH)"
			echo WARNING $JAVA_VERSION is untested please email this message to TrentJarvi@yahoo.com and let me know if it works.
		;;
		HP-UX\ Java\ C.01.1*) 
			fix_parameters $JPATH/lib/javax.comm.properties
			fix_comm_jar $JPATH/lib/comm.jar
			JHOME=$JPATH/"lib"
			CLASSPATH="-classpath .:\$(TOP):\$(TOP)/src:\$(JPATH)/lib/classes.zip:\$(JPATH)/lib/comm.jar:$CLASSPATH"
			RXTX_PATH="\$(prefix)/lib/"
		;;
		*)
			fix_parameters $JPATH/lib/javax.comm.properties
			fix_comm_jar $JPATH/lib/comm.jar
			JHOME=$JPATH"/lib"
			CLASSPATH="-classpath .:\$(TOP):\$(TOP)/src:\$(JPATH)/lib/classes.zip:\$(JPATH)/lib/comm.jar:$CLASSPATH"
			RXTX_PATH="\$(prefix)/lib/"
			echo WARNING $JAVA_VERSION is untested please email this message to TrentJarvi@yahoo.com and let me know if it works.
		;;
	esac
	case $OS_ARCH in
		PA-RISC)
		;;
		*)
		;;
	esac
	case $OS_VERSION in
		B.10.20)
		;;
		*)
		;;
	esac
	case $JAVA_VENDOR in
        	Hewlett\ Packard\ Co\.)
		;;
		*)
		;;
	esac
;;
BeOS)
	echo WARNING: BeOS support is in RXTX-1.5
	JHOME=$JPATH"/share/kaffe"
	RXTX_PATH="\$(JPATH)/lib/"
	CFLAGS="$CFLAGS -D_NO_POSIX=1 -D_NO_XOPEN4=1"
	CLASSPATH="-classpath .:\$(TOP):\$(TOP)/../src:\$(JPATH)/share/kaffe/Klasses.jar:\$(JPATH)/lib/comm.jar:$CLASSPATH"
	TARGETLIB="\$(target_alias)/libSerial.la"
	EXTENSION="cpp"
	LDFLAGS="-ldevice"
#  sigh, from ltconfig 
#  beos*)
#     if $LD --help 2>&1 | egrep ': supported targets:.* elf' > /dev/null; then
#       allow_undefined_flag=unsupported
#       # Joseph Beckenbach <jrb3@best.com> says some releases of gcc
#       # support --undefined.  This deserves some investigation.  FIXME

	LIBTOOL_FIX="sed s/deplibs_check_method=\\\"unknown\\\"/deplibs_check_method=\\\"pass_all\\\"/1 libtool > libtool.tmp; sed s/allow_undefined_flag=\\\"unsupported\\\"/allow_undefined_flag=\\\"supported\\\"/1 libtool.tmp > libtool;rm libtool.tmp;"


;;
WIN32)
	case $JAVA_VERSION in
	1.2*|1.3*)
		CLASSPATH="-classpath .:\$(TOP):\$(TOP)/src:`find $JPATH/ -name comm.jar |head -n1`:$CLASSPATH"
		JHOME=$JPATH"/jre/lib/ext"
	;;
	1.*)
		CLASSPATH="-classpath .:\$(TOP):\$(TOP)/src:\$(JPATH)/lib/classes.zip:\$(JPATH)/lib/comm.jar:$CLASSPATH"
		RXTX_PATH="\$(prefix)/lib/"
		#JAVAH_FIX="if [ ! -d com ]; then if [ ! -f \$(JPATH)/lib/comm.jar ]; then echo \"Please install comm.jar from CommAPI in \$(JPATH)/java/lib/ 1>&2\"; else mkdir -p com/sun/comm;\$(JAR) -xf \$(JPATH)/lib/comm.jar;  fi; fi;"
		JHOME=$JPATH/"lib"
	;;
	esac
	if test x$WIN32INCLUDE = x; then
	echo "We need to know what directory the windows java include files"
	echo "are located in.  Please enter the directory now."
	echo
	echo "example /home/jarvi/win32java/include"
	echo
	read REPLY
	WINDOWS_JAVA_INCLUDE="-I $REPLY -I $REPLY/win32"
	else
	WINDOWS_JAVA_INCLUDE="-I $WIN32INCLUDE -I $WIN32INCLUDE/win32"
	fi
	TARGETLIB="\$(target_alias)/Serial.dll"
;;
Mac*OS)
# Place marker only
	TARGETLIB="\$(target_alias)/libSerial.la"
	RXTX_PATH="\$(JPATH)/jre/lib/\$(OS_ARCH)"
	JHOME=$JPATH/"lib"
	CFLAGS="$CFLAGS -D_NO_POSIX=1 -D_NO_XOPEN4=1"
	CLASSPATH="-classpath .:\$(TOP):\$(TOP)/src:\$(JPATH)/lib/classes.zip:\$(JPATH)/lib/comm.jar:$CLASSPATH"

;;

Solaris*)
	TARGETLIB="\$(target_alias)/libSerial.la"
	RXTX_PATH="\$(JPATH)/jre/lib/\$(OS_ARCH)"
	JHOME=$JPATH/"lib"
	CFLAGS="$CFLAGS -D_NO_POSIX=1 -D_NO_XOPEN4=1"
	CLASSPATH="-classpath .:\$(TOP):\$(TOP)/src:\$(JPATH)/lib/classes.zip:\$(JPATH)/lib/comm.jar:$CLASSPATH"

;;

OS*2)
# Place marker only
	TARGETLIB="\$(target_alias)/libSerial.la"
	RXTX_PATH="\$(JPATH)/jre/lib/\$(OS_ARCH)"
	JHOME=$JPATH/"lib"
	CFLAGS="$CFLAGS -D_NO_POSIX=1 -D_NO_XOPEN4=1"
	CLASSPATH="-classpath .:\$(TOP):\$(TOP)/src:\$(JPATH)/lib/classes.zip:\$(JPATH)/lib/comm.jar:$CLASSPATH"

;;

AIX)
	TARGETLIB="\$(target_alias)/libSerial.la"
	RXTX_PATH="\$(JPATH)/jre/lib/\$(OS_ARCH)"
	JHOME=$JPATH/"lib"
	CFLAGS="$CFLAGS -D_NO_POSIX=1 -D_NO_XOPEN4=1"
	CLASSPATH="-classpath .:\$(TOP):\$(TOP)/src:\$(JPATH)/lib/classes.zip:\$(JPATH)/lib/comm.jar:$CLASSPATH"

;;

Digital\ Unix)
	TARGETLIB="\$(target_alias)/libSerial.la"
	RXTX_PATH="\$(JPATH)/jre/lib/\$(OS_ARCH)"
	JHOME=$JPATH/"lib"
	CFLAGS="$CFLAGS -D_NO_POSIX=1 -D_NO_XOPEN4=1"
	CLASSPATH="-classpath .:\$(TOP):\$(TOP)/src:\$(JPATH)/lib/classes.zip:\$(JPATH)/lib/comm.jar:$CLASSPATH"

;;

NetWare*)
# Place marker only
	TARGETLIB="\$(target_alias)/libSerial.la"
	RXTX_PATH="\$(JPATH)/jre/lib/\$(OS_ARCH)"
	JHOME=$JPATH/"lib"
	CFLAGS="$CFLAGS -D_NO_POSIX=1 -D_NO_XOPEN4=1"
	CLASSPATH="-classpath .:\$(TOP):\$(TOP)/src:\$(JPATH)/lib/classes.zip:\$(JPATH)/lib/comm.jar:$CLASSPATH"

;;

MPE*)
	TARGETLIB="\$(target_alias)/libSerial.la"
	RXTX_PATH="\$(JPATH)/jre/lib/\$(OS_ARCH)"
	JHOME=$JPATH/"lib"
	CFLAGS="$CFLAGS -D_NO_POSIX=1 -D_NO_XOPEN4=1"
	CLASSPATH="-classpath .:\$(TOP):\$(TOP)/src:\$(JPATH)/lib/classes.zip:\$(JPATH)/lib/comm.jar:$CLASSPATH"
;;

*)
	TARGETLIB="\$(target_alias)/libSerial.la"
	RXTX_PATH="\$(JPATH)/jre/lib/\$(OS_ARCH)"
	JHOME=$JPATH/"lib"
	CFLAGS="$CFLAGS -D_NO_POSIX=1 -D_NO_XOPEN4=1"
	CLASSPATH="-classpath .:\$(TOP):\$(TOP)/src:\$(JPATH)/lib/classes.zip:\$(JPATH)/lib/comm.jar:$CLASSPATH"
;;
esac ]

AC_OUTPUT(Makefile)



################################  END ########################################



# Toys.  Gota lovem.
#echo $ac_n checking java.library.path   " "
#JAVA_LIBRARY_PATH=`java conftest "java.library.path"`
#echo $JAVA_LIBRARY_PATH
#echo $ac_n checking java.class.version   " "
#JAVA_CLASS_VERSION=`java conftest "java.class.version"`
#echo $JAVA_CLASS_VERSION
